deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-hello-world-pod
  namespace: dev
spec:
  containers:
  - name: go-hello-world
    image: camiloavelar/go-hello-world:0.0.3
    imagePullPolicy: IfNotPresent
    ports:
      - containerPort: 8080
        name: go-hello-world
    livenessProbe:           
      httpGet:
        path: /health
        port: 8080
        scheme: HTTP
      initialDelaySeconds: 5
      periodSeconds: 15
      timeoutSeconds: 5
    readinessProbe:          
      httpGet:
        path: /readiness
        port: 8080
        scheme: HTTP
      initialDelaySeconds: 5
      timeoutSeconds: 1
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
      requests:
        cpu: 250m
        memory: 256Mi
