deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world-service
  namespace: dev
  labels:
    app: go-hello-world
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: go-hello-world
  type: ClusterIP
